--- a/La Lettre Palm Beach/lpb_confirmation_automatique.html
+++ b/La Lettre Palm Beach/lpb_confirmation_automatique.html
@@ -44,16 +44,17 @@
       };
   
       /**
-       * Fonction qui permet de savoir si c'est une offre life
-       **/
-      Choice.prototype.isLife = function () {
-        if (this.starting_price > 500 && this.starting_price_duration == 12 && this.renewal_term_length == 12 &&
-          (this.default_price == 99 || this.default_price == 19) && this.auto_renew == 1) {
-          return true;
-        } else {
-          return false;
-        }
-      };
+         * Fonction qui permet de savoir si c'est une offre life
+         **/
+         Choice.prototype.isLife = function () {
+            if ((this.starting_price > 500 && this.default_price == 99 || this.starting_price > 300 && this
+                    .default_price == 19) && this.starting_price_duration == 12 && this.renewal_term_length == 12 &&
+                this.auto_renew == 1) {
+                return true;
+            } else {
+                return false;
+            }
+        };
   
       /**
        * Fonction qui permet de savoir si il y a un ou plusieurs mois gratuit dans l'offre
