--- a/La Lettre Palm Beach/lpb_bdc_automatise.html
+++ b/La Lettre Palm Beach/lpb_bdc_automatise.html
@@ -69,6 +69,17 @@
                 return false;
             }
         };
+
+        /**
+         * Fonction qui permet de savoir si il y a un ou plusieurs mois gratuit dans l'offre
+         **/
+         Choice.prototype.isTrialMonth = function () {
+            if (this.starting_price == 1 && this.default_price > 1) {
+                return true;
+            } else {
+                return false;
+            }
+        };
   
   
   
@@ -93,6 +104,10 @@
                 return convertToDuration(this.renewal_term_length, genre) + ` avec ` + this
                     .starting_price_duration +
                     ` mois gratuit`;
+            } else if (this.isTrialMonth()){
+                return convertToDuration(this.renewal_term_length, genre) + ` avec ` + this
+                    .starting_price_duration +
+                    ` mois d'essai`;
             } else {
                 return convertToDuration(this.starting_price_duration, genre);
             }
@@ -106,6 +121,8 @@
                 return "à vie";
             } else if (this.isFreeMonth()) {
                 return "gratuit";
+            } else if (this.isTrialMonth()){
+                return this.starting_price_duration + " mois d'essai";
             } else {
                 return convertToDuration(this.starting_price_duration);
             }
@@ -129,7 +146,9 @@
             if (this.isLife()) {
                 affichage = "Offre à vie"
             } else if (this.isFreeMonth()) {
-                //affichage = this.starting_price_duration + " mois gratuit";
+                affichage = this.starting_price_duration + " mois gratuit";
+            } else if (this.isTrialMonth()) {
+                affichage = "Testez pendant " + this.starting_price_duration + " mois";
             } else {
                 affichage = this.starting_price_duration + `&nbsp;mois d'abonnement`;
             }
@@ -154,8 +173,15 @@
          Choice.prototype.price = function () {
             var affichage = "";
             if (this.isFreeMonth()) {
-                affichage = `<span class="price mb-4">`+this.starting_price_duration + " mois d’essai à "+this.starting_price+"&nbsp;€</span>";
-            } else {
+                affichage = `<span class="price mb-4">`+this.starting_price_duration + " mois gratuit à "+this.starting_price+"&nbsp;€</span>";
+            }
+            else if(this.isTrialMonth()){
+                affichage = `<span class="price mb-4">`+this.starting_price_duration + " mois d'essai à "+this.starting_price+"&nbsp;€</span>";
+            }
+            else if(this.old_price == null){
+                affichage = `<span class="price mb-4"><span class="currency" style="color: red;">` + this.starting_price + `&nbsp;€ </span>TTC</span>`;
+            }
+            else {
                 affichage = `<span class="price mb-4"><span class="currency">` + this.starting_price + `&nbsp;€ </span>TTC</span>`;
             }
             return affichage;
